# django-react

./: .gitignore  build.sh
backend/: db.sqlite3  pyproject.toml
backend/static/: staticfiles.json
backend/static/js/: 787.cda612ba.chunk.875ea8f52a90.js  main.7097d855.07efc9bf5f96.js  main.7097d855.js.map
backend/todolist/: settings.py  urls.py
