[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["David Elliott <david.elliott@hadrian.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
waitress = "^2.1.2"
whitenoise = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
